Add download link

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
       <td></td>
       <td><button type="button" id="generate">Generate</button></td>
     </tr>
+    <tr>
+      <td></td>
+      <td><button type="button" id="download">Download</button></td>
+    </tr>
   </table>
   <br />
 
-  <canvas id="canvas" width="600" height="600"></canvas>
+  <canvas id="canvas" style="max-width: 100%"></canvas>
 
   <script src="maps.js"></script>
 </body>
