--- a/index.html
+++ b/index.html
@@ -7,30 +7,40 @@
     <tr>
       <td>North latitude:</td>
       <td><input type="text" id="north" value="52.382052"></td>
-    </td>
+    </tr>
     <tr>
       <td>South latitude:</td>
       <td><input type="text" id="south" value="52.360052"></td>
-    </td>
+    </tr>
     <tr>
       <td>West longitude:</td>
       <td><input type="text" id="west" value="4.877190"></td>
-    </td>
+    </tr>
     <tr>
       <td>East longitude:</td>
       <td><input type="text" id="east" value="4.916190"></td>
-    </td>
+    </tr>
     <tr>
       <td>Zoom level:</td>
       <td><input type="text" id="zoom" value="15"></td>
-    </td>
+    </tr>
     <tr>
       <td></td>
       <td><button type="button" id="generate">Generate</button></td>
     </tr>
+  </table>
+  <table>
+    <tr>
+      <td>Place:</td>
+      <td><input type="text" id="search_text" value="Amsterdam"></td>
+    </tr>
     <tr>
       <td></td>
-      <td><button type="button" id="download">Download</button></td>
+      <td id="suggestions"></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><button type="button" id="search">Search</button></td>
     </tr>
   </table>
   <br />
