--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table style='float: left; padding: 10px'>
+  <table style='display: inline-block; vertical-align: top; padding: 10px'>
     <tr>
       <td>North latitude:</td>
       <td><input type="text" id="north" value="52.382052"></td>
@@ -29,7 +29,7 @@
       <td><button type="button" id="generate">Generate</button></td>
     </tr>
   </table>
-  <table style='float: left; padding: 10px'>
+  <table style='display: inline-block; vertical-align: top; padding: 10px'>
     <tr style="vertical-align: top">
       <td>Place:</td>
       <td style="vertical-align: top">
