--- a/index.html
+++ b/index.html
@@ -3,42 +3,46 @@
 <head>
 </head>
 <body>
-  <table style='display: inline-block; vertical-align: top; padding: 10px'>
-    <tr>
-      <td>North latitude:</td>
-      <td><input type="text" id="north" value="52.382052"></td>
-    </tr>
-    <tr>
-      <td>South latitude:</td>
-      <td><input type="text" id="south" value="52.360052"></td>
-    </tr>
-    <tr>
-      <td>West longitude:</td>
-      <td><input type="text" id="west" value="4.877190"></td>
-    </tr>
-    <tr>
-      <td>East longitude:</td>
-      <td><input type="text" id="east" value="4.916190"></td>
-    </tr>
-    <tr>
-      <td>Zoom level:</td>
-      <td><input type="text" id="zoom" value="15"></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><button type="button" id="generate">Generate</button></td>
-    </tr>
-  </table>
-  <table style='display: inline-block; vertical-align: top; padding: 10px'>
-    <tr style="vertical-align: top">
-      <td>Place:</td>
-      <td style="vertical-align: top">
-        <input type="text" id="search_text" value="Amsterdam"><br />
-        <button type="button" id="search">Search</button>
-      </td>
-      <td id="suggestions"></td>
-    </tr>
-  </table>
+  <form action="" style='display: inline-block; vertical-align: top; padding: 10px' onsubmit="return false;">
+    <table >
+      <tr>
+        <td>North latitude:</td>
+        <td><input type="text" id="north" value="52.382052"></td>
+      </tr>
+      <tr>
+        <td>South latitude:</td>
+        <td><input type="text" id="south" value="52.360052"></td>
+      </tr>
+      <tr>
+        <td>West longitude:</td>
+        <td><input type="text" id="west" value="4.877190"></td>
+      </tr>
+      <tr>
+        <td>East longitude:</td>
+        <td><input type="text" id="east" value="4.916190"></td>
+      </tr>
+      <tr>
+        <td>Zoom level:</td>
+        <td><input type="text" id="zoom" value="15"></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit" id="generate" value="Generate"></td>
+      </tr>
+    </table>
+  </form>
+  <form action="" style='display: inline-block; vertical-align: top; padding: 10px' onsubmit="return false;">
+   <table >
+      <tr style="vertical-align: top">
+        <td>Place:</td>
+        <td style="vertical-align: top">
+          <input type="text" id="search_text" value="Amsterdam"><br />
+          <input type="submit" id="search" value="Search">
+        </td>
+        <td id="suggestions"></td>
+      </tr>
+    </table>
+  </form>
   <br />
 
   <canvas id="canvas" style="max-width: 100%"></canvas>
