Add download button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 </head>
 <body>
+  <script src="FileSave.min.js"></script>
+  <script src="canvas-toBlob.js"></script>
+  <script src="Blob.js"></script>
   <form action="" style='display: inline-block; vertical-align: top; padding: 10px' onsubmit="return false;">
     <table >
       <tr>
@@ -43,6 +46,8 @@
       </tr>
     </table>
   </form>
+  <br />
+  <button id="download" style='margin: 0 10px 10px 0;'>Download this image</button>
   <br />
 
   <canvas id="canvas" style="max-width: 100%"></canvas>
