--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,6 @@
       }
     </script>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzvgVkGFZNr19zI1nsYo0teQqcgBAIfoU&libraries=places"/>
-
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -46,6 +44,9 @@
       }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzvgVkGFZNr19zI1nsYo0teQqcgBAIfoU&libraries=places">
+    </script>
   </head>
   <body>
     <div id="root" style="padding-bottom: 20px">
