--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       }
     </script>
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzvgVkGFZNr19zI1nsYo0teQqcgBAIfoU&libraries=places"/>
+
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -46,7 +48,7 @@
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
-    <div id="root">
+    <div id="root" style="padding-bottom: 20px">
 
     </div>
   </body>
