Add places in CV

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,15 @@
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzvgVkGFZNr19zI1nsYo0teQqcgBAIfoU&libraries=places">
     </script>
+
+    <style>
+      #root {
+        padding-bottom: 20px;
+      }
+    </style>
   </head>
   <body>
-    <div id="root" style="padding-bottom: 20px">
+    <div id="root">
 
     </div>
   </body>
